--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>why not</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
    <h1>try again</h1> 
+   <h2> now i can do my business</h2>
+   <p> love is a valuable article.love is a valuable article.love is a valuable article </p>
 </body>
 </html>
