--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <img src="1602228430476-01.jpeg" alt="mostafiz">
    <h1>try again</h1> 
    <h2> now i can do my business</h2>
    <p> love is a valuable article.love is a valuable article.love is a valuable article </p>
